<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <EditText
        android:id="@+id/input_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textUri"
        android:hint="@string/input_url_hint"
        />
    
    <CheckBox 
        android:id="@+id/auth_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="12sp"
        android:text="@string/authentication_check"
        />
        
    <EditText 
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="12sp"
        android:inputType="text"
        android:hint="@string/username_hint"
        />
            
    <EditText 
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="12sp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        />
    
    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/go_button"
        android:background="@drawable/action_button_selector"
        />

</LinearLayout>
